# ChangeLog for net-libs/libnetfilter_queue
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_queue/ChangeLog,v 1.21 2012/08/11 14:35:33 maekke Exp $

  11 Aug 2012; Markus Meier <maekke@gentoo.org>
  libnetfilter_queue-1.0.1.ebuild:
  x86 stable, bug #419267

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org>
  libnetfilter_queue-1.0.1.ebuild:
  Stable for amd64, wrt bug #419267

  27 Jun 2012; Markus Meier <maekke@gentoo.org>
  libnetfilter_queue-1.0.1.ebuild:
  add ~arm, bug #407795

  14 Jun 2012; Michael Weber <xmw@gentoo.org> libnetfilter_queue-1.0.1.ebuild:
  rekeyword ~ppc (bug 407795)

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  libnetfilter_queue-0.0.15.ebuild, libnetfilter_queue-0.0.16.ebuild,
  libnetfilter_queue-0.0.17.ebuild, libnetfilter_queue-1.0.0.ebuild,
  libnetfilter_queue-1.0.1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*libnetfilter_queue-1.0.1 (05 Jan 2012)

  05 Jan 2012; Tim Harder <radhermit@gentoo.org>
  +libnetfilter_queue-1.0.1.ebuild:
  Version bump.

  28 Nov 2011; Tim Harder <radhermit@gentoo.org>
  libnetfilter_queue-1.0.0.ebuild:
  Bump to EAPI 4 and fix autotools-utils usage (bug #392113).

  27 Nov 2011; Tim Harder <radhermit@gentoo.org>
  libnetfilter_queue-1.0.0.ebuild:
  Build in the source tree.

*libnetfilter_queue-1.0.0 (23 May 2011)

  23 May 2011; Jeroen Roovers <jer@gentoo.org>
  +libnetfilter_queue-1.0.0.ebuild:
  Version bump thanks to Peter Volkov (bug #). Add IUSE=static-libs.

  08 Sep 2009; Mike Auty <ikelos@gentoo.org>
  libnetfilter_queue-0.0.12.ebuild, libnetfilter_queue-0.0.13.ebuild,
  libnetfilter_queue-0.0.15.ebuild, libnetfilter_queue-0.0.16.ebuild,
  libnetfilter_queue-0.0.17.ebuild:
  Making CONFIG_CHECK non-fatal for userland ebuilds, see bug 283320.

*libnetfilter_queue-0.0.17 (26 May 2009)

  26 May 2009; Jeroen Roovers <jer@gentoo.org>
  +libnetfilter_queue-0.0.17.ebuild:
  Version bump.
