@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libnetfilter_queue
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_queue/ChangeLog,v 1.21 2012/08/11 14:35:33 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnetfilter_queue/ChangeLog,v 1.22 2012/10/23 12:47:37 jer Exp $
+
+*libnetfilter_queue-1.0.2 (23 Oct 2012)
+
+  23 Oct 2012; Jeroen Roovers <jer@gentoo.org>
+  -libnetfilter_queue-1.0.0.ebuild, +libnetfilter_queue-1.0.2.ebuild:
+  Version bump.
 
   11 Aug 2012; Markus Meier <maekke@gentoo.org>
   libnetfilter_queue-1.0.1.ebuild:
